--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -2,14 +2,16 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  color: aqua;
 }
 
 main {
   flex: 1 0 auto;
+  color: aqua;
 }
 
 footer {
   padding-top: 0;
   text-align: right;
+  color: aqua;
 }
-
