--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %}
-<h1>About the Cat Collector</h1>
+<h1>About the Bird Collector</h1>
 <hr />
-<p>Hire the Cat Collector!</p>
+<p>Hire the Bird Collector!</p>
 
 {% endblock %}
 
