--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -18,14 +18,14 @@
       <div class="nav-wrapper">
         <ul>
           <li>
-            <a href="/" class="left brand-logo">&nbsp;&nbsp;Cat Collector</a>
+            <a href="/" class="left brand-logo">&nbsp;&nbsp;Bird Collector</a>
           </li>
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
           {% if user.is_authenticated %}
-          <li><a href="{% url 'cats_create' %}">Add a Cat</a></li>
-          <li><a href="{% url 'index' %}">View All My Cats</a></li>
+          <li><a href="{% url 'birds_create' %}">Add a Birds</a></li>
+          <li><a href="{% url 'index' %}">View All My Birds</a></li>
           <li><a href="{% url 'toys_index' %}">View All Toys</a></li>
           <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
           <li><a href="{% url 'logout' %}">Log Out</a></li>
@@ -40,7 +40,7 @@
   </header>
   <main class="container">{% block content %} {% endblock %}</main>
   <footer class="page-footer">
-    <div class="right">All Rights Reserved, © 2022 Cat Collector
+    <div class="right">All Rights Reserved, © 2022 Bird Collector
   </footer>
 </body>
 
