--- a/main_app/templates/birds/detail.html
+++ b/main_app/templates/birds/detail.html
@@ -1,45 +1,45 @@
 {% extends 'base.html' %} {% block content %}
 
-<h1>Cat Details</h1>
+<h1>Bird Details</h1>
 
 <div class="row">
   <div class="col s6">
     <div class="card">
       <div class="card-content">
-        <span class="card-title">{{ cat.name }}</span>
-        <p>Breed: {{ cat.breed }}</p>
-        <p>Description: {{ cat.description }}</p>
-        {% if cat.age > 0 %}
-        <p>Age: {{ cat.age }}</p>
+        <span class="card-title">{{ bird.name }}</span>
+        <p>Breed: {{ bird.breed }}</p>
+        <p>Description: {{ bird.description }}</p>
+        {% if bird.age > 0 %}
+        <p>Age: {{ bird.age }}</p>
         {% else %}
         <p>Age: Kitten</p>
         {% endif %}
       </div>
       <div class="card-action">
-        <a href="{% url 'cats_update' cat.id %}">Edit</a>
-        <a href="{% url 'cats_delete' cat.id %}">Delete</a>
+        <a href="{% url 'birds_update' bird.id %}">Edit</a>
+        <a href="{% url 'birds_delete' bird.id %}">Delete</a>
       </div>
     </div>
-    <form action="{% url 'add_feeding' cat.id %}" method="post">
+    <form action="{% url 'add_feeding' bird.id %}" method="post">
       {% csrf_token %} {{ feeding_form.as_p }}
       <input type="submit" class="btn" value="Add Feeding" />
     </form>
     <br />
-    {% if cat.fed_for_today %}
+    {% if bird.fed_for_today %}
     <div class="card-panel teal-text center-align">
-      {{cat.name}} has been fed all meals for today
+      {{bird.name}} has been fed all meals for today
     </div>
     {% else %}
     <div class="card-panel red-text center-align">
-      {{cat.name}} might be hungry
+      {{bird.name}} might be hungry
     </div>
     {% endif %}
-    {% for photo in cat.photo_set.all %}
-    <img class="responsive-img card-panel" src="{{ photo.url }}" alt="{{ cat.name }}">
+    {% for photo in bird.photo_set.all %}
+    <img class="responsive-img card-panel" src="{{ photo.url }}" alt="{{ bird.name }}">
     {% empty %}
     <div class="card-panel teal-text center-align">No Photos Uploaded</div>
     {% endfor %}
-    <form action="{% url 'add_photo' cat.id %}" class="card-panel" method="POST" enctype="multipart/form-data">
+    <form action="{% url 'add_photo' bird.id %}" class="card-panel" method="POST" enctype="multipart/form-data">
       {% csrf_token %}
       <input type="file" name="photo-file" />
       <br />
@@ -56,7 +56,7 @@
         </tr>
       </thead>
       <tbody>
-        {% for feeding in cat.feeding_set.all %}
+        {% for feeding in bird.feeding_set.all %}
         <tr>
           <td>{{feeding.date}}</td>
           <td>{{feeding.get_meal_display}}</td>
@@ -69,8 +69,8 @@
 <hr />
 <div class="row">
   <div class="col s6">
-    <h3>{{ cat.name }}'s Toys</h3>
-    {% if cat.toys.count %} {% for toy in cat.toys.all %}
+    <h3>{{ bird.name }}'s Toys</h3>
+    {% if bird.toys.count %} {% for toy in bird.toys.all %}
     <div class="card">
       <div class="card-content">
         <span class="card-title">
@@ -79,7 +79,7 @@
         </span>
       </div>
       <div class="card-action">
-        <form action="{% url 'assoc_toy_delete' cat.id toy.id %}" method="post">
+        <form action="{% url 'assoc_toy_delete' bird.id toy.id %}" method="post">
           {% csrf_token %}
           <button type="submit" class="btn">Remove</button>
         </form>
@@ -100,14 +100,14 @@
         </span>
       </div>
       <div class="card-action">
-        <form action="{% url 'assoc_toy' cat.id toy.id %}" method="post">
+        <form action="{% url 'assoc_toy' bird.id toy.id %}" method="post">
           {% csrf_token %}
           <button type="submit" class="btn">Add</button>
         </form>
       </div>
     </div>
     {% endfor %} {% else %}
-    <h5>{{cat.name}} Already Has All Toys Available</h5>
+    <h5>{{bird.name}} Already Has All Toys Available</h5>
     {% endif %}
   </div>
 
