--- a/main_app/templates/main_app/bird_confirm_delete.html
+++ b/main_app/templates/main_app/bird_confirm_delete.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block content %}
-<h1>Delete Cat</h1>
+<h1>Delete Bird</h1>
 
 <h4>
   Are you sure you want to delete
@@ -9,6 +9,6 @@
 <form action="" method="POST">
   {% csrf_token %}
   <input type="submit" value="Yes - Delete!" class="btn" />
-  <a href="{% url 'detail' cat.id %}">Cancel</a>
+  <a href="{% url 'detail' bird.id %}">Cancel</a>
 </form>
 {% endblock %}
