--- a/main_app/templates/main_app/bird_form.html
+++ b/main_app/templates/main_app/bird_form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} {% block content %} {% if object %}
 <h1>Edit <span class="teal-text">{{object.name}}</span></h1>
 {% else %}
-<h1>Add Cat</h1>
+<h1>Add Bird</h1>
 {% endif %}
 <form action="" method="post">
   {% csrf_token %}
